talos/applications/argo-rollouts/talos/dashboard/deployment.yaml
---
# Source: argo-rollouts/charts/argo-rollouts/templates/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-rollouts-talos-dashboard
  namespace: "argocd"
  labels:
    app.kubernetes.io/component: rollouts-dashboard
    helm.sh/chart: argo-rollouts-2.38.2
    app.kubernetes.io/name: argo-rollouts
    app.kubernetes.io/instance: argo-rollouts-talos
    app.kubernetes.io/version: "v1.7.2"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argo-rollouts
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-rollouts
      app.kubernetes.io/instance: argo-rollouts-talos
      app.kubernetes.io/component: rollouts-dashboard
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-rollouts
        app.kubernetes.io/instance: argo-rollouts-talos
        app.kubernetes.io/component: rollouts-dashboard
    spec:
      serviceAccountName: argo-rollouts-talos-dashboard
      containers:
      - image: "quay.io/argoproj/kubectl-argo-rollouts:v1.7.2"
        imagePullPolicy: IfNotPresent
        args:
        - dashboard
        - "--loglevel=info"
        - "--kloglevel=0"
        name: argo-rollouts-dashboard
        ports:
        - containerPort: 3100
          name: dashboard
        securityContext:
          {}
        resources:
          {}
      securityContext:
        runAsNonRoot: true
