talos/applications/argo-rollouts/talos/dashboard/service.yaml
---
# Source: argo-rollouts/charts/argo-rollouts/templates/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-talos-dashboard
  namespace: "argocd"
  labels:
    app.kubernetes.io/component: rollouts-dashboard
    helm.sh/chart: argo-rollouts-2.38.2
    app.kubernetes.io/name: argo-rollouts
    app.kubernetes.io/instance: argo-rollouts-talos
    app.kubernetes.io/version: "v1.7.2"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argo-rollouts
  annotations:
spec:
  type: ClusterIP
  ports:
  - name: dashboard
    protocol: TCP
    port: 3100
    targetPort: 3100
  selector:
    app.kubernetes.io/component: rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts
    app.kubernetes.io/instance: argo-rollouts-talos
